--- a/libmariadb/CMakeLists.txt
+++ b/libmariadb/CMakeLists.txt
@@ -537,7 +537,7 @@ configure_package_config_file(
 )
 write_basic_package_version_file(
     "${PROJECT_NAME}ConfigVersion.cmake"
-    VERSION ${PROJECT_VERSION}
+    VERSION ${CPACK_PACKAGE_VERSION}
     COMPATIBILITY SameMajorVersion
 )
 INSTALL(
